// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostgreSQL SELECT Query Integration Tests > Array Functions > should compute ARRAY_COMPACT function > postgres-results-ARRAY_COMPACT__fld_array__ 1`] = `
[
  [
    "[1,2]",
    "[3]",
  ],
  [
    "4",
    "5",
    "6",
  ],
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Array Functions > should compute ARRAY_COMPACT function > postgres-select-ARRAY_COMPACT__fld_array__ 1`] = `
"select "id", ARRAY(
      SELECT value::text
      FROM json_array_elements("array_col")
      WHERE value IS NOT NULL AND value::text != 'null'
    ) as computed_value from "test_select_query_table""
`;

exports[`PostgreSQL SELECT Query Integration Tests > Array Functions > should compute ARRAY_FLATTEN function > postgres-results-ARRAY_FLATTEN__fld_array__ 1`] = `
[
  [
    "[1,2]",
    "[3]",
  ],
  [
    "4",
    "null",
    "5",
    "null",
    "6",
  ],
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Array Functions > should compute ARRAY_FLATTEN function > postgres-select-ARRAY_FLATTEN__fld_array__ 1`] = `
"select "id", ARRAY(
      SELECT value::text
      FROM json_array_elements("array_col")
    ) as computed_value from "test_select_query_table""
`;

exports[`PostgreSQL SELECT Query Integration Tests > Array Functions > should compute ARRAY_JOIN function > postgres-results-ARRAY_JOIN__fld_array_______ 1`] = `
[
  "[1,2],[3]",
  "4,null,5,null,6",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Array Functions > should compute ARRAY_JOIN function > postgres-select-ARRAY_JOIN__fld_array_______ 1`] = `
"select "id", (
      SELECT string_agg(
        CASE
          WHEN json_typeof(value) = 'array' THEN value::text
          ELSE value::text
        END,
        ','
      )
      FROM json_array_elements("array_col")
    ) as computed_value from "test_select_query_table""
`;

exports[`PostgreSQL SELECT Query Integration Tests > Array Functions > should compute ARRAY_UNIQUE function > postgres-results-ARRAY_UNIQUE__fld_array__ 1`] = `
[
  [
    "[1,2]",
    "[3]",
  ],
  [
    "6",
    "4",
    "null",
    "5",
  ],
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Array Functions > should compute ARRAY_UNIQUE function > postgres-select-ARRAY_UNIQUE__fld_array__ 1`] = `
"select "id", ARRAY(
      SELECT DISTINCT value::text
      FROM json_array_elements("array_col")
    ) as computed_value from "test_select_query_table""
`;

exports[`PostgreSQL SELECT Query Integration Tests > Basic Arithmetic Operations > should compute a * b > postgres-results-_fld_a_____fld_b_ 1`] = `
[
  2,
  15,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Basic Arithmetic Operations > should compute a * b > postgres-select-_fld_a_____fld_b_ 1`] = `"select "id", ("a" * "b") as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Basic Arithmetic Operations > should compute a + 1 and return 2 > postgres-results-_fld_a____1 1`] = `
[
  2,
  6,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Basic Arithmetic Operations > should compute a + 1 and return 2 > postgres-select-_fld_a____1 1`] = `"select "id", ("a" + 1) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Basic Arithmetic Operations > should compute a + b > postgres-results-_fld_a_____fld_b_ 1`] = `
[
  3,
  8,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Basic Arithmetic Operations > should compute a + b > postgres-select-_fld_a_____fld_b_ 1`] = `"select "id", ("a" + "b") as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Basic Arithmetic Operations > should compute a / b > postgres-results-_fld_a_____fld_b_ 1`] = `
[
  0.5,
  1.6666666666666667,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Basic Arithmetic Operations > should compute a / b > postgres-select-_fld_a_____fld_b_ 1`] = `"select "id", ("a" / "b") as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Basic Arithmetic Operations > should compute a - b > postgres-results-_fld_a_____fld_b_ 1`] = `
[
  -1,
  2,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Basic Arithmetic Operations > should compute a - b > postgres-select-_fld_a_____fld_b_ 1`] = `"select "id", ("a" - "b") as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Binary Operations > should compute addition operation > postgres-results-_fld_a_____fld_b_ 1`] = `
[
  3,
  8,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Binary Operations > should compute addition operation > postgres-select-_fld_a_____fld_b_ 1`] = `"select "id", ("a" + "b") as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Binary Operations > should compute division operation > postgres-results-_fld_a_____fld_b_ 1`] = `
[
  0.5,
  1.6666666666666667,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Binary Operations > should compute division operation > postgres-select-_fld_a_____fld_b_ 1`] = `"select "id", ("a" / "b") as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Binary Operations > should compute modulo operation > postgres-results-7___3 1`] = `
[
  1,
  1,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Binary Operations > should compute modulo operation > postgres-select-7___3 1`] = `"select "id", (7 % 3) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Binary Operations > should compute multiplication operation > postgres-results-_fld_a_____fld_b_ 1`] = `
[
  2,
  15,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Binary Operations > should compute multiplication operation > postgres-select-_fld_a_____fld_b_ 1`] = `"select "id", ("a" * "b") as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Binary Operations > should compute subtraction operation > postgres-results-_fld_a_____fld_b_ 1`] = `
[
  -1,
  2,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Binary Operations > should compute subtraction operation > postgres-select-_fld_a_____fld_b_ 1`] = `"select "id", ("a" - "b") as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Comparison Operations > should compute equal operation > postgres-results-_fld_a____1 1`] = `
[
  true,
  false,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Comparison Operations > should compute equal operation > postgres-select-_fld_a____1 1`] = `"select "id", ("a" = 1) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Comparison Operations > should compute greater than operation > postgres-results-_fld_a_____fld_b_ 1`] = `
[
  false,
  true,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Comparison Operations > should compute greater than operation > postgres-select-_fld_a_____fld_b_ 1`] = `"select "id", ("a" > "b") as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Comparison Operations > should compute greater than or equal operation > postgres-results-_fld_a_____1 1`] = `
[
  true,
  true,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Comparison Operations > should compute greater than or equal operation > postgres-select-_fld_a_____1 1`] = `"select "id", ("a" >= 1) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Comparison Operations > should compute less than operation > postgres-results-_fld_a_____fld_b_ 1`] = `
[
  true,
  false,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Comparison Operations > should compute less than operation > postgres-select-_fld_a_____fld_b_ 1`] = `"select "id", ("a" < "b") as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Comparison Operations > should compute less than or equal operation > postgres-results-_fld_a_____1 1`] = `
[
  true,
  false,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Comparison Operations > should compute less than or equal operation > postgres-select-_fld_a_____1 1`] = `"select "id", ("a" <= 1) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Comparison Operations > should compute not equal operation > postgres-results-_fld_a_____1 1`] = `
[
  1,
  5,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Comparison Operations > should compute not equal operation > postgres-select-_fld_a_____1 1`] = `"select "id", "a" as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Complex Expressions > should compute complex nested expression > postgres-results-IF__fld_a_____fld_b___UPPER__fld_text____LOWER_CONCATENATE__fld_text___________modified____ 1`] = `
[
  "HELLO",
  "WORLD",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Complex Expressions > should compute complex nested expression > postgres-select-IF__fld_a_____fld_b___UPPER__fld_text____LOWER_CONCATENATE__fld_text___________modified____ 1`] = `"select "id", CASE WHEN (("a" > "b") IS NOT NULL AND ("a" > "b")::text != 'null') THEN UPPER("text_col") ELSE LOWER(CONCAT("text_col", ' - ', 'modified')) END as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Complex Expressions > should compute mathematical expression with functions > postgres-results-ROUND_SQRT_POWER__fld_a___2____POWER__fld_b___2____2_ 1`] = `
[
  "2.24",
  "5.83",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Complex Expressions > should compute mathematical expression with functions > postgres-select-ROUND_SQRT_POWER__fld_a___2____POWER__fld_b___2____2_ 1`] = `"select "id", ROUND(SQRT((POWER("a"::numeric, 2::numeric) + POWER("b"::numeric, 2::numeric))::numeric)::numeric, 2::integer) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Date/Time Functions (Mutable) > should compute DATESTR function > postgres-results-DATESTR__fld_date__ 1`] = `
[
  "2024-01-10",
  "2024-01-12",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Date/Time Functions (Mutable) > should compute DATESTR function > postgres-select-DATESTR__fld_date__ 1`] = `"select "id", "date_col"::date::text as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Date/Time Functions (Mutable) > should compute DAY function > postgres-results-DAY__fld_date__ 1`] = `
[
  10,
  12,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Date/Time Functions (Mutable) > should compute DAY function > postgres-select-DAY__fld_date__ 1`] = `"select "id", EXTRACT(DAY FROM "date_col"::timestamp)::int as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Date/Time Functions (Mutable) > should compute HOUR function > postgres-results-HOUR__fld_date__ 1`] = `
[
  8,
  15,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Date/Time Functions (Mutable) > should compute HOUR function > postgres-select-HOUR__fld_date__ 1`] = `"select "id", EXTRACT(HOUR FROM "date_col"::timestamp)::int as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Date/Time Functions (Mutable) > should compute MINUTE function > postgres-results-MINUTE__fld_date__ 1`] = `
[
  0,
  30,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Date/Time Functions (Mutable) > should compute MINUTE function > postgres-select-MINUTE__fld_date__ 1`] = `"select "id", EXTRACT(MINUTE FROM "date_col"::timestamp)::int as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Date/Time Functions (Mutable) > should compute MONTH function > postgres-results-MONTH__fld_date__ 1`] = `
[
  1,
  1,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Date/Time Functions (Mutable) > should compute MONTH function > postgres-select-MONTH__fld_date__ 1`] = `"select "id", EXTRACT(MONTH FROM "date_col"::timestamp)::int as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Date/Time Functions (Mutable) > should compute NOW function (mutable) > postgres-select-NOW___ 1`] = `"NOW()"`;

exports[`PostgreSQL SELECT Query Integration Tests > Date/Time Functions (Mutable) > should compute SECOND function > postgres-results-SECOND__fld_date__ 1`] = `
[
  0,
  0,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Date/Time Functions (Mutable) > should compute SECOND function > postgres-select-SECOND__fld_date__ 1`] = `"select "id", EXTRACT(SECOND FROM "date_col"::timestamp)::int as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Date/Time Functions (Mutable) > should compute TIMESTR function > postgres-results-TIMESTR__fld_date__ 1`] = `
[
  "08:00:00",
  "15:30:00",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Date/Time Functions (Mutable) > should compute TIMESTR function > postgres-select-TIMESTR__fld_date__ 1`] = `"select "id", "date_col"::time::text as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Date/Time Functions (Mutable) > should compute TODAY function (mutable) > postgres-select-TODAY___ 1`] = `"CURRENT_DATE"`;

exports[`PostgreSQL SELECT Query Integration Tests > Date/Time Functions (Mutable) > should compute WEEKDAY function > postgres-results-WEEKDAY__fld_date__ 1`] = `
[
  3,
  5,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Date/Time Functions (Mutable) > should compute WEEKDAY function > postgres-select-WEEKDAY__fld_date__ 1`] = `"select "id", EXTRACT(DOW FROM "date_col"::timestamp)::int as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Date/Time Functions (Mutable) > should compute WEEKNUM function > postgres-results-WEEKNUM__fld_date__ 1`] = `
[
  2,
  2,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Date/Time Functions (Mutable) > should compute WEEKNUM function > postgres-select-WEEKNUM__fld_date__ 1`] = `"select "id", EXTRACT(WEEK FROM "date_col"::timestamp)::int as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Date/Time Functions (Mutable) > should compute YEAR function > postgres-results-YEAR__fld_date__ 1`] = `
[
  2024,
  2024,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Date/Time Functions (Mutable) > should compute YEAR function > postgres-select-YEAR__fld_date__ 1`] = `"select "id", EXTRACT(YEAR FROM "date_col"::timestamp)::int as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Logical Functions > should compute AND function > postgres-results-AND__fld_a____0___fld_b____0_ 1`] = `
[
  true,
  true,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Logical Functions > should compute AND function > postgres-select-AND__fld_a____0___fld_b____0_ 1`] = `"select "id", ((("a" > 0)) AND (("b" > 0))) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Logical Functions > should compute BLANK function > postgres-results-BLANK__ 1`] = `
[
  "",
  "",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Logical Functions > should compute BLANK function > postgres-select-BLANK__ 1`] = `"select "id", '' as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Logical Functions > should compute IF function > postgres-results-IF__fld_a_____fld_b____greater____not_greater__ 1`] = `
[
  "greater",
  "greater",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Logical Functions > should compute IF function > postgres-select-IF__fld_a_____fld_b____greater____not_greater__ 1`] = `"select "id", CASE WHEN (("a" > "b") IS NOT NULL AND ("a" > "b")::text != 'null') THEN 'greater' ELSE 'not greater' END as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Logical Functions > should compute NOT function > postgres-results-NOT__fld_a_____fld_b__ 1`] = `
[
  true,
  false,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Logical Functions > should compute NOT function > postgres-select-NOT__fld_a_____fld_b__ 1`] = `"select "id", NOT (("a" > "b")) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Logical Functions > should compute OR function > postgres-results-OR__fld_a____10___fld_b____1_ 1`] = `
[
  true,
  true,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Logical Functions > should compute OR function > postgres-select-OR__fld_a____10___fld_b____1_ 1`] = `"select "id", ((("a" > 10)) OR (("b" > 1))) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Logical Functions > should compute SWITCH function > postgres-results-SWITCH__fld_a___1___one___5___five____other__ 1`] = `
[
  "one",
  "five",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Logical Functions > should compute SWITCH function > postgres-select-SWITCH__fld_a___1___one___5___five____other__ 1`] = `"select "id", CASE "a" WHEN 1 THEN 'one' WHEN 5 THEN 'five' ELSE 'other' END as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Logical Functions > should compute XOR function > postgres-results-XOR__fld_a____0___fld_b____10_ 1`] = `
[
  true,
  true,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Logical Functions > should compute XOR function > postgres-select-XOR__fld_a____0___fld_b____10_ 1`] = `"select "id", ((("a" > 0)) AND NOT (("b" > 10))) OR (NOT (("a" > 0)) AND (("b" > 10))) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute ABS function > postgres-results-ABS__fld_a_____fld_b__ 1`] = `
[
  "1",
  "2",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute ABS function > postgres-select-ABS__fld_a_____fld_b__ 1`] = `"select "id", ABS(("a" - "b")::numeric) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute AVERAGE function > postgres-results-__fld_a_____fld_b_____2 1`] = `
[
  1.5,
  4,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute AVERAGE function > postgres-select-__fld_a_____fld_b_____2 1`] = `"select "id", ((("a" + "b")) / 2) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute CEILING function > postgres-results-CEILING__fld_a_____fld_b__ 1`] = `
[
  "1",
  "2",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute CEILING function > postgres-select-CEILING__fld_a_____fld_b__ 1`] = `"select "id", CEIL(("a" / "b")::numeric) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute EVEN function > postgres-results-EVEN_3_ 1`] = `
[
  4,
  4,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute EVEN function > postgres-select-EVEN_3_ 1`] = `"select "id", CASE WHEN 3::integer % 2 = 0 THEN 3::integer ELSE 3::integer + 1 END as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute EXP function > postgres-results-EXP_1_ 1`] = `
[
  "2.7182818284590452",
  "2.7182818284590452",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute EXP function > postgres-select-EXP_1_ 1`] = `"select "id", EXP(1::numeric) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute FLOOR function > postgres-results-FLOOR__fld_a_____fld_b__ 1`] = `
[
  "0",
  "1",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute FLOOR function > postgres-select-FLOOR__fld_a_____fld_b__ 1`] = `"select "id", FLOOR(("a" / "b")::numeric) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute INT function > postgres-results-INT__fld_a_____fld_b__ 1`] = `
[
  "0",
  "1",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute INT function > postgres-select-INT__fld_a_____fld_b__ 1`] = `"select "id", FLOOR(("a" / "b")::numeric) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute LOG function > postgres-results-LOG_10_ 1`] = `
[
  "2.3025850929940457",
  "2.3025850929940457",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute LOG function > postgres-select-LOG_10_ 1`] = `"select "id", LN(10::numeric) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute MAX function > postgres-results-MAX__fld_a____fld_b__ 1`] = `
[
  2,
  5,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute MAX function > postgres-select-MAX__fld_a____fld_b__ 1`] = `"select "id", GREATEST("a", "b") as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute MIN function > postgres-results-MIN__fld_a____fld_b__ 1`] = `
[
  1,
  3,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute MIN function > postgres-select-MIN__fld_a____fld_b__ 1`] = `"select "id", LEAST("a", "b") as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute MOD function > postgres-results-MOD__fld_a____4__3_ 1`] = `
[
  "2",
  "0",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute MOD function > postgres-select-MOD__fld_a____4__3_ 1`] = `"select "id", MOD(("a" + 4)::numeric, 3::numeric) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute ODD function > postgres-results-ODD_4_ 1`] = `
[
  5,
  5,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute ODD function > postgres-select-ODD_4_ 1`] = `"select "id", CASE WHEN 4::integer % 2 = 1 THEN 4::integer ELSE 4::integer + 1 END as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute POWER function > postgres-results-POWER__fld_a____fld_b__ 1`] = `
[
  "1.0000000000000000",
  "125.0000000000000000",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute POWER function > postgres-select-POWER__fld_a____fld_b__ 1`] = `"select "id", POWER("a"::numeric, "b"::numeric) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute ROUND function > postgres-results-ROUND__fld_a_____fld_b___2_ 1`] = `
[
  "0.50",
  "1.67",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute ROUND function > postgres-select-ROUND__fld_a_____fld_b___2_ 1`] = `"select "id", ROUND(("a" / "b")::numeric, 2::integer) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute ROUNDDOWN function > postgres-results-ROUNDDOWN__fld_a_____fld_b___1_ 1`] = `
[
  0.5,
  1.6,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute ROUNDDOWN function > postgres-select-ROUNDDOWN__fld_a_____fld_b___1_ 1`] = `"select "id", FLOOR(("a" / "b")::numeric * POWER(10, 1::integer)) / POWER(10, 1::integer) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute ROUNDUP function > postgres-results-ROUNDUP__fld_a_____fld_b___1_ 1`] = `
[
  0.5,
  1.7,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute ROUNDUP function > postgres-select-ROUNDUP__fld_a_____fld_b___1_ 1`] = `"select "id", CEIL(("a" / "b")::numeric * POWER(10, 1::integer)) / POWER(10, 1::integer) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute SQRT function > postgres-results-SQRT__fld_a____4_ 1`] = `
[
  "2.000000000000000",
  "4.472135954999579",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute SQRT function > postgres-select-SQRT__fld_a____4_ 1`] = `"select "id", SQRT(("a" * 4)::numeric) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute SUM function > postgres-results-_fld_a_____fld_b_ 1`] = `
[
  3,
  8,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute SUM function > postgres-select-_fld_a_____fld_b_ 1`] = `"select "id", ("a" + "b") as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute VALUE function > postgres-results-VALUE__123__ 1`] = `
[
  "123",
  "123",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Math Functions > should compute VALUE function > postgres-select-VALUE__123__ 1`] = `"select "id", '123'::numeric as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > System Functions > should compute AUTO_NUMBER function > postgres-results-AUTO_NUMBER__ 1`] = `
[
  1,
  2,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > System Functions > should compute AUTO_NUMBER function > postgres-select-AUTO_NUMBER__ 1`] = `"select "id", __auto_number as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > System Functions > should compute RECORD_ID function > postgres-results-RECORD_ID__ 1`] = `
[
  "rec1",
  "rec2",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > System Functions > should compute RECORD_ID function > postgres-select-RECORD_ID__ 1`] = `"select "id", __id as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute CONCATENATE function > postgres-results-CONCATENATE__fld_text_________test__ 1`] = `
[
  "hello test",
  "world test",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute CONCATENATE function > postgres-select-CONCATENATE__fld_text_________test__ 1`] = `"select "id", CONCAT("text_col", ' ', 'test') as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute ENCODE_URL_COMPONENT function > postgres-results-ENCODE_URL_COMPONENT__hello_world__ 1`] = `
[
  "hello world",
  "hello world",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute ENCODE_URL_COMPONENT function > postgres-select-ENCODE_URL_COMPONENT__hello_world__ 1`] = `"select "id", encode('hello world'::bytea, 'escape') as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute FIND function > postgres-results-FIND__l____fld_text__ 1`] = `
[
  3,
  4,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute FIND function > postgres-select-FIND__l____fld_text__ 1`] = `"select "id", POSITION('l' IN "text_col") as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute LEFT function > postgres-results-LEFT__fld_text___3_ 1`] = `
[
  "hel",
  "wor",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute LEFT function > postgres-select-LEFT__fld_text___3_ 1`] = `"select "id", LEFT("text_col", 3::integer) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute LEN function > postgres-results-LEN__fld_text__ 1`] = `
[
  5,
  5,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute LEN function > postgres-select-LEN__fld_text__ 1`] = `"select "id", LENGTH("text_col") as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute LOWER function > postgres-results-LOWER__fld_text__ 1`] = `
[
  "hello",
  "world",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute LOWER function > postgres-select-LOWER__fld_text__ 1`] = `"select "id", LOWER("text_col") as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute MID function > postgres-results-MID__fld_text___2__3_ 1`] = `
[
  "ell",
  "orl",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute MID function > postgres-select-MID__fld_text___2__3_ 1`] = `"select "id", SUBSTRING("text_col" FROM 2::integer FOR 3::integer) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute REPLACE function > postgres-results-REPLACE__fld_text___1__2___Hi__ 1`] = `
[
  "Hillo",
  "Hirld",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute REPLACE function > postgres-select-REPLACE__fld_text___1__2___Hi__ 1`] = `"select "id", OVERLAY("text_col" PLACING 'Hi' FROM 1::integer FOR 2::integer) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute REPT function > postgres-results-REPT__x___3_ 1`] = `
[
  "xxx",
  "xxx",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute REPT function > postgres-select-REPT__x___3_ 1`] = `"select "id", REPEAT('x', 3::integer) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute RIGHT function > postgres-results-RIGHT__fld_text___3_ 1`] = `
[
  "llo",
  "rld",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute RIGHT function > postgres-select-RIGHT__fld_text___3_ 1`] = `"select "id", RIGHT("text_col", 3::integer) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute SEARCH function > postgres-results-SEARCH__L____fld_text__ 1`] = `
[
  3,
  4,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute SEARCH function > postgres-select-SEARCH__L____fld_text__ 1`] = `"select "id", POSITION(UPPER('L') IN UPPER("text_col")) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute SUBSTITUTE function > postgres-results-SUBSTITUTE__fld_text____l____x__ 1`] = `
[
  "hexxo",
  "worxd",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute SUBSTITUTE function > postgres-select-SUBSTITUTE__fld_text____l____x__ 1`] = `"select "id", REPLACE("text_col", 'l', 'x') as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute T function > postgres-results-T__fld_text__ 1`] = `
[
  "hello",
  "world",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute T function > postgres-select-T__fld_text__ 1`] = `"select "id", CASE WHEN "text_col" IS NULL THEN '' ELSE "text_col"::text END as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute TRIM function > postgres-results-TRIM_CONCATENATE_______fld_text________ 1`] = `
[
  "hello",
  "world",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute TRIM function > postgres-select-TRIM_CONCATENATE_______fld_text________ 1`] = `"select "id", TRIM(CONCAT(' ', "text_col", ' ')) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute UPPER function > postgres-results-UPPER__fld_text__ 1`] = `
[
  "HELLO",
  "WORLD",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Text Functions > should compute UPPER function > postgres-select-UPPER__fld_text__ 1`] = `"select "id", UPPER("text_col") as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Type Casting > should compute boolean casting > postgres-results-_fld_a____0 1`] = `
[
  true,
  true,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Type Casting > should compute boolean casting > postgres-select-_fld_a____0 1`] = `"select "id", ("a" > 0) as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Type Casting > should compute date casting > postgres-results-DATESTR__fld_date__ 1`] = `
[
  "2024-01-10",
  "2024-01-12",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Type Casting > should compute date casting > postgres-select-DATESTR__fld_date__ 1`] = `"select "id", "date_col"::date::text as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Type Casting > should compute number casting > postgres-results-VALUE__123__ 1`] = `
[
  "123",
  "123",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Type Casting > should compute number casting > postgres-select-VALUE__123__ 1`] = `"select "id", '123'::numeric as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Type Casting > should compute string casting > postgres-results-T__fld_a__ 1`] = `
[
  "1",
  "5",
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Type Casting > should compute string casting > postgres-select-T__fld_a__ 1`] = `"select "id", CASE WHEN "a" IS NULL THEN '' ELSE "a"::text END as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Utility Functions > should compute null check > postgres-results-_fld_a__IS_NULL 1`] = `
[
  1,
  5,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Utility Functions > should compute null check > postgres-select-_fld_a__IS_NULL 1`] = `"select "id", "a" as computed_value from "test_select_query_table""`;

exports[`PostgreSQL SELECT Query Integration Tests > Utility Functions > should compute parentheses grouping > postgres-results-__fld_a_____fld_b_____2 1`] = `
[
  6,
  16,
]
`;

exports[`PostgreSQL SELECT Query Integration Tests > Utility Functions > should compute parentheses grouping > postgres-select-__fld_a_____fld_b_____2 1`] = `"select "id", ((("a" + "b")) * 2) as computed_value from "test_select_query_table""`;
